feat: support multiple project types in configuration and commands

--- a/src/forge/.forge/config.yaml
+++ b/src/forge/.forge/config.yaml
@@ -1,4 +1,5 @@
-project_type: backend
+project_types:
+  - backend
 registry:
   url: https://github.com/DrivvenConsulting/forge-registry.git
   ref: main
